# UpdateService

./: CMakeLists.txt  LICENSE  README.md
main_app/: CMakeLists.txt
main_app/src/: main.cpp
update_service/: CMakeLists.txt
update_service/include/: UpdateService.h
update_service/src/: UpdateService.cpp  UpdateService.h  main.cpp
update_service/src/JSON/: JSONController.cpp  JSONController.h
update_service/src/Network/: NetworkClientController.cpp  NetworkClientController.h
update_service/src/Network/Base/: NetworkController.cpp  NetworkController.h
